Swag changes
